package herencias.tarea6b;

import java.time.LocalDate;

public interface SolicitarBaja {

    boolean solicitarBaja(LocalDate fechaBaja);
}
