' Generated by UML Generator
' Encoded: pLTBZzis4BxhLn3enUxQHi_6Of7DxgRO8aqNTMv13oEAzd8hYQv81KNJzBTtI8flQPi7KEHYc3F3RvwS6RsG2WOrTcqbV-Vz6GRe26r1ockb1bwFYjrJqH_uNupyK3toXX7A1zgogZ9Iv64GHoR5G3vKX6oPF3FAeUKDD7jo5vqqbuhktBAEzKeSe8K1MNlIYB56E6HlyUV2uQrwqTK3svC3cj6VDWJEh4Ka8GEfvyVeC7Pi40Ts6WUjxo2eWNTiQHIAbo2PqxaXo-Pko3F6hXD3pUd4L7nzjIwylv2PoB9olFnUy6R2lIaDqV0-RXfuJkOv1u822YqTaNl_wyEh2FQZo-zrEtQziDcr8RxxyymQZh0-EPftPFGHNi8JxCbhWQ2te49IBSWNfhJKjuumNVJVPBBQ5s-T3b4Xi8YUHF-Lyqi3nfvfpC2SSpy2mXGOxCmgqNBAyVtb44_m7dQATsmNWzL2j0nwVVCHvEEDQ8oNl5UQnFuOePKhKJ_joI_r4wCgkeBfX5gg0QWYqxjbWnGzcCH-boP6KuhK6B6GdF1UBSvdvdOTN_KfD11buYmvLP0cwTefAou7Jc5G2l667qlDI8kDdYwKmRpJBmsQv9aiT28jCDEBV3mTrF_G_zQ9llGXPJWBhocNUjQ6DDw7O4_HpMBUdDsVthr-P59nqLzJQ5Z7RRLVVC2HfpZzI3hW_Gg6am_fkzyYR2_cbDnoaFVOA51IrnFLRTiXuxsVuNmvHVkrw4zNmOgtNEdxjZhCC_zfh7aB54sRQvUJ_BSy0ZTasOzrx8Chgqnyhflc8ize-A_Ekb0NoD7TVi3PFGpY1AkEIIPD2qsR9TTfFW9bv13tQ9F1VnRRzbopzaNWAYUgWliUSKHM0OPpmtIEoifm83Qi_lIjxqfkZbg75oVfn8vYiv1qXwV3j8Xcc7FH_EJgqG_-xG0r9dUQBQtugiaTjggu8MsByRjbKrT6gxbKbwv9NsaUcCK7fPcwj4kG8MDPCsf3Tkl-XWLiqcVhnf_okbbIYnLLAjsGEPLVFyp3H9hntcpHJc39t6mvc1R5F69cFR2y6UzI3E-UXed3gq42SpOWqRGIFMuDM3N1WxtV7IAv3Z0ifWATVVjf3uzM45j8Nesj92ovbjdP79SJFGiSPiaESXQrQwlPHXVvcXvdmF7ffz0RKW2ltJUAbLnbDxAFdQ2Zg9sODsDB1ZHfIq2G_k3CA-03ftGXXDr_xswtVr_vv5NJPv8XJdkje-rsI4l6IENtnKG-NrPskolVA2gtGzWRan6L7oeBv1dT7bvijv7zCTKQ7cZV8oqK_GlMDsFN_Wi
' URL: http://www.plantuml.com/plantuml/uml/pLTBZzis4BxhLn3enUxQHi_6Of7DxgRO8aqNTMv13oEAzd8hYQv81KNJzBTtI8flQPi7KEHYc3F3RvwS6RsG2WOrTcqbV-Vz6GRe26r1ockb1bwFYjrJqH_uNupyK3toXX7A1zgogZ9Iv64GHoR5G3vKX6oPF3FAeUKDD7jo5vqqbuhktBAEzKeSe8K1MNlIYB56E6HlyUV2uQrwqTK3svC3cj6VDWJEh4Ka8GEfvyVeC7Pi40Ts6WUjxo2eWNTiQHIAbo2PqxaXo-Pko3F6hXD3pUd4L7nzjIwylv2PoB9olFnUy6R2lIaDqV0-RXfuJkOv1u822YqTaNl_wyEh2FQZo-zrEtQziDcr8RxxyymQZh0-EPftPFGHNi8JxCbhWQ2te49IBSWNfhJKjuumNVJVPBBQ5s-T3b4Xi8YUHF-Lyqi3nfvfpC2SSpy2mXGOxCmgqNBAyVtb44_m7dQATsmNWzL2j0nwVVCHvEEDQ8oNl5UQnFuOePKhKJ_joI_r4wCgkeBfX5gg0QWYqxjbWnGzcCH-boP6KuhK6B6GdF1UBSvdvdOTN_KfD11buYmvLP0cwTefAou7Jc5G2l667qlDI8kDdYwKmRpJBmsQv9aiT28jCDEBV3mTrF_G_zQ9llGXPJWBhocNUjQ6DDw7O4_HpMBUdDsVthr-P59nqLzJQ5Z7RRLVVC2HfpZzI3hW_Gg6am_fkzyYR2_cbDnoaFVOA51IrnFLRTiXuxsVuNmvHVkrw4zNmOgtNEdxjZhCC_zfh7aB54sRQvUJ_BSy0ZTasOzrx8Chgqnyhflc8ize-A_Ekb0NoD7TVi3PFGpY1AkEIIPD2qsR9TTfFW9bv13tQ9F1VnRRzbopzaNWAYUgWliUSKHM0OPpmtIEoifm83Qi_lIjxqfkZbg75oVfn8vYiv1qXwV3j8Xcc7FH_EJgqG_-xG0r9dUQBQtugiaTjggu8MsByRjbKrT6gxbKbwv9NsaUcCK7fPcwj4kG8MDPCsf3Tkl-XWLiqcVhnf_okbbIYnLLAjsGEPLVFyp3H9hntcpHJc39t6mvc1R5F69cFR2y6UzI3E-UXed3gq42SpOWqRGIFMuDM3N1WxtV7IAv3Z0ifWATVVjf3uzM45j8Nesj92ovbjdP79SJFGiSPiaESXQrQwlPHXVvcXvdmF7ffz0RKW2ltJUAbLnbDxAFdQ2Zg9sODsDB1ZHfIq2G_k3CA-03ftGXXDr_xswtVr_vv5NJPv8XJdkje-rsI4l6IENtnKG-NrPskolVA2gtGzWRan6L7oeBv1dT7bvijv7zCTKQ7cZV8oqK_GlMDsFN_Wi
' Generated on: 2026-04-09T13:02:23.836741686

@startuml
skinparam classAttributeIconSize 0
hide circle

class Profesor {
  -especialidad: Especialidad
  -complementoSalarial: double
  --
  +Profesor(nombre: String, apellidos: String, nif: String, numeroSeguridadSocial: String, salarioBase: double, especialidad: Especialidad, complementoSalarial: double)
  +Profesor()
  +getEspecialidad(): Especialidad
  +setEspecialidad(especialidad: Especialidad): void
  +getComplementoSalarial(): double
  +setComplementoSalarial(complementoSalarial: double): void
  +calcularIRPF(): double
}

class Alumno {
  -numeroExpediente: String
  -fechaBaja: LocalDate
  --
  +Alumno(nombre: String, apellidos: String, nif: String, numeroExpediente: String)
  +Alumno()
  +getNumeroExpediente(): String
  +setNumeroExpediente(numeroExpediente: String): void
  +getFechaBaja(): LocalDate
  +setFechaBaja(fechaBaja: LocalDate): void
  +toString(): String
  +solicitarBaja(fechaBaja: java.time.LocalDate): boolean
  +hashCode(): int
  +equals(obj: Object): boolean
}

abstract class Persona {
  #nombre: String
  #apellidos: String
  #nif: String
  --
  +Persona(nombre: String, apellidos: String, nif: String)
  +Persona()
  +getNombre(): String
  +setNombre(nombre: String): void
  +getApellidos(): String
  +setApellidos(apellidos: String): void
  +getNif(): String
  +setNif(nif: String): void
}

abstract class Empleado {
  -numeroSeguridadSocial: String
  -salarioBase: double
  --
  +Empleado(nombre: String, apellidos: String, nif: String, numeroSeguridadSocial: String, salarioBase: double)
  +Empleado()
  +getNumeroSeguridadSocial(): String
  +setNumeroSeguridadSocial(numeroSeguridadSocial: String): void
  +getSalarioBase(): double
  +setSalarioBase(salarioBase: double): void
  +calcularIRPF(): double
}

class GestionAcademia {
  +{static} main(args: String[]): void
  +{static} calcularDiasInterinos(acad: Academia): Map<String,Long>
}

class Titular {
  -fechaJubilacion: LocalDate
  --
  +Titular(nombre: String, apellidos: String, nif: String, numeroSeguridadSocial: String, salarioBase: double, especialidad: Especialidad, complementoSalarial: double, fechaJubilacion: LocalDate)
  +Titular()
  +getfechaJubilacion(): LocalDate
  +setfechaJubilacion(fechaJubilacion: LocalDate): void
  +toString(): String
  +calcularIRPF(): double
  +pedirProrroga(meses: int): boolean
}

interface SolicitarBaja {
  ~solicitarBaja(fechaBaja: LocalDate): boolean
}

class Interino {
  -fechaInicio: LocalDate
  -fechaCese: LocalDate
  --
  +Interino()
  +Interino(nombre: String, apellidos: String, nif: String, numeroSeguridadSocial: String, salarioBase: double, especialidad: Especialidad, complementoSalarial: double)
  +getFechaInicio(): LocalDate
  +setFechaInicio(fechaInicion: LocalDate): void
  +getFechaCese(): LocalDate
  +setFechaCese(fechaCese: LocalDate): void
  +toString(): String
  +calcularDiasTrabajados(): long
  +solicitarBaja(fechaBaja: java.time.LocalDate): boolean
}

class Academia {
  -nombre: String
  -empleado: List<Empleado>
  -alumno: Set<Alumno>
  -direccion: Direccion
  --
  +Academia()
  +Academia(nombre: String, empleado: List<Empleado>, alumno: Set<Alumno>, direccion: Direccion)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getEmpleado(): List<Empleado>
  +setEmpleado(empleado: List<Empleado>): void
  +getAlumno(): Set<Alumno>
  +setAlumno(alumno: Set<Alumno>): void
  +getDireccion(): Direccion
  +setDireccion(direccion: Direccion): void
  +contratarEmpleado(e: Empleado): void
  +matricularAlumno(a: Alumno): void
}

class Direccion {
  -calleNumero: String
  -cpostal: String
  -poblacion: String
  --
  +Direccion()
  +Direccion(calleNumero: String, cpostal: String, poblacion: String)
  +setCpostal(cpostal: String): void
  +getCalleNumero(): String
  +setCalleNumero(calleNumero: String): void
  +getCpostal(): String
  +getPoblacion(): String
  +setPoblacion(poblacion: String): void
}

Profesor --|> Empleado
Alumno --|> Persona
Alumno ..|> SolicitarBaja
Empleado --|> Persona
GestionAcademia ..> Academia
Titular --|> Profesor
Interino --|> Profesor
Interino ..|> SolicitarBaja
Academia o-- Empleado
Academia o-- Alumno
Academia *-- Direccion
@enduml